# gcn-kafka-rust

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
examples/: consumer.rs
src/: lib.rs
