[package]
name = "gcn-kafka"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"
authors = [
    "Leo Singer <leo.p.singer@nasa.gov>",
    "Tom Barclay <tb@umbc.edu>",
    "Eric Burns <ericburns@lsu.e>",
]
repository = "https://github.com/nasa-gcn/gcn-kafka-rust"
homepage = "https://gcn.nasa.gov"
description = "Kafka client for NASA's General Coordinates Network (GCN)"
categories = ["aerospace", "api-bindings", "science"]

[dependencies]
rdkafka = { version = "0.39.0", features = ["ssl", "curl", "zstd"] }
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
